Local storage update
Added local storage code

--- a/watchlist.html
+++ b/watchlist.html
@@ -15,11 +15,11 @@
         </header>
         <div id="body">
             <div id="movie-list">
-           <h3>You watchlist is looking a little empty....</h3>
+           <h3 id ="updated-movie-list">You watchlist is looking a little empty....</h3>
             </div>
         </div>
         <h1></h1>
         
-        <script src="index.js"></script>
+        <script src="watchlist.js"></script>
     </body>
 </html>
